Updated path to main CSS to use non-datestamped version

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 				<!-- T4 nav 9186: 2013 design - head end -->
 				<link rel="shortcut icon" href="http://www.york.ac.uk/media/global/templateimages/favicon.ico" />
 				<script src="http://www.york.ac.uk/media/global/2013/scripts/modernizr.js"></script>
-				<link rel="stylesheet" media="screen" href="http://www.york.ac.uk/media/global/2013/styles/york_styles.20140731.css"> <!-- york_styles.css -->
+				<link rel="stylesheet" media="screen" href="//www.york.ac.uk/media/global/2013/styles/york_styles.css"> <!-- york_styles.css -->
 				<!--[if IE]>
 				<link rel="stylesheet" media="screen" href="http://www.york.ac.uk/media/global/2013/styles/ie.css">
 				<![endif]-->
