--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
 										<link rel="stylesheet" media="screen" href="css/maps.css"> <!-- maps.css -->
 										<h1>Maps and directions <sup style="font-size:0.6em;">beta</sup></h1>
 										<p>This is a preview of a new online University map. The <a href="/np/maps.html">old map pages</a> are still available. Email comments, ideas or bug reports to <a href="mailto:web-office@york.ac.uk">web-office@york.ac.uk</a>.</p>
+										<form>
+											<p><label for="room-search-value">Room search</label><input type="text" id="room-search-value" name="room-search-value" placeholder="Enter room number" value="D/L008"><input type="submit" id="room-search-submit" value="Search"></p>
+											<div id="room-search-message">
+											</div>
+										</form>
 										<div id="mapcontainer">
 												<div id="mapcentre">
 														Centre the map on:
