--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 										<h1>Maps and directions <sup style="font-size:0.6em;">beta</sup></h1>
 										<p>This is a preview of a new online University map. The <a href="/np/maps.html">old map pages</a> are still available. Email comments, ideas or bug reports to <a href="mailto:web-office@york.ac.uk">web-office@york.ac.uk</a>.</p>
 										<form>
-											<p><label for="room-search-value">Room search</label><input type="text" id="room-search-value" name="room-search-value" placeholder="Enter room number" value="D/L008"><input type="submit" id="room-search-submit" value="Search"></p>
+											<p><label for="room-search-value">Room search</label><input type="text" id="room-search-value" name="room-search-value" placeholder="Enter room number"><input type="submit" id="room-search-submit" value="Search"></p>
 											<div id="room-search-message">
 											</div>
 										</form>
