Tweaks to wording and stuff.

--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
 <!-- end Page Content template -->
 <div class="col-half first-col"><!-- start Page Content template -->
 <blockquote class="boxout">
-<p><strong>Not sure what the building you are looking for is called?</strong>&nbsp;If you are looking for a specific room code (eg&nbsp;<em>A/B/123</em>), the&nbsp;<a href="http://www.york.ac.uk/admin/estates/buildcodes.htm" target="_blank">building codes</a>&nbsp;list will tell you the building name this corresponds to.</p>
+<p><strong>Try out our new room search</strong></p>
+<p>Enter a room code in the <i>Room code search</i> below and find directions to your room and the location of the building it's in.</p>
+<p><small>Room code search is in beta. Not all rooms are available, please double check before relying on this service.</small></p>
 </blockquote>
 <!-- end Page Content template -->
 </div><div class="col-half "><!-- start Page Content template -->
@@ -151,37 +153,35 @@
 <!-- end Page Content template -->
 
 										<link rel="stylesheet" media="screen" href="css/maps.css"> <!-- maps.css -->
- 										<div id="mapcontainer">
-												<div id="mapcentre">
-														Centre the map on:
-														<a href="#heslington-west" onclick="javascript: pageTracker._trackEvent('Map', 'Centre on', 'Heslington West');">Heslington West</a> <span class="separator">|</span>
-														<a href="#heslington-east" onclick="javascript: pageTracker._trackEvent('Map', 'Centre on', 'Heslington East');">Heslington East</a> <span class="separator">|</span>
-														<a href="#kings-manor" onclick="javascript: pageTracker._trackEvent('Map', 'Centre on', 'King\'s Manor');">King's Manor</a>
-												</div>
-												<div id="mapnavigation" >
-														<div id="maptabs" >
-																<div id="tab-1">
-																		<div class="faq" id="templateFAQ">
-																				<h3 class="q">Demo</h3>
-																				<div class="a">
-																						<ul>
-																								<li><a href="#"></a></li>
-																						</ul>
-																				</div>
-																		</div>
-																</div>
-														</div>
-												</div>
-												<div id="mapdiv" style="width:500px; height:500px;  "></div>
-												<div id="mapfooter">Map tiles © 2012 <a target="_blank" href="http://cloudmade.com">CloudMade</a> (<a target="_blank" href="http://cloudmade.com/terms_conditions">Terms of Use</a>). Map data <a target="_blank" href="http://creativecommons.org/licenses/by-sa/2.0/">CCBYSA</a> 2012 <a target="_blank" href="http://openstreetmap.org">OpenStreetMap.org</a> contributors </div>
-										</div>
-										<p>&nbsp;</p>
+    <div id="mapcontainer">
+    	<div id="mapcentre">
+    			Centre the map on:
+    			<a href="#heslington-west" onclick="javascript: pageTracker._trackEvent('Map', 'Centre on', 'Heslington West');">Heslington West</a> <span class="separator">|</span>
+    			<a href="#heslington-east" onclick="javascript: pageTracker._trackEvent('Map', 'Centre on', 'Heslington East');">Heslington East</a> <span class="separator">|</span>
+    			<a href="#kings-manor" onclick="javascript: pageTracker._trackEvent('Map', 'Centre on', 'King\'s Manor');">King's Manor</a>
+    	</div>
+    	<div id="mapnavigation" >
+    			<div id="maptabs" >
+    					<div id="tab-1">
+    							<div class="faq" id="templateFAQ">
+    									<h3 class="q">Demo</h3>
+    									<div class="a">
+    											<ul>
+    													<li><a href="#"></a></li>
+    											</ul>
+    									</div>
+    							</div>
+    					</div>
+    			</div>
+    	</div>
+    	<div id="mapdiv" style="width:500px; height:500px;  "></div>
+    	<div id="mapfooter">Map tiles © 2012 <a target="_blank" href="http://cloudmade.com">CloudMade</a> (<a target="_blank" href="http://cloudmade.com/terms_conditions">Terms of Use</a>). Map data <a target="_blank" href="http://creativecommons.org/licenses/by-sa/2.0/">CCBYSA</a> 2012 <a target="_blank" href="http://openstreetmap.org">OpenStreetMap.org</a> contributors </div>
+    </div>
+    <p>&nbsp;</p>
 
 								<!-- local scripts -->
 								<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-								<!--script type="text/javascript" src="js/infobox.min.js"></script-->
 								<script type="text/javascript" src="js/maps.js"></script>
-
 
 <div class="col-half first-col"><!-- start Page Content template -->
 <h2>Printable maps</h2>
