Updated copyright text

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     			</div>
     	</div>
     	<div id="mapdiv" style="width:500px; height:500px;  "></div>
-    	<div id="mapfooter">Map tiles © 2012 <a target="_blank" href="http://cloudmade.com">CloudMade</a> (<a target="_blank" href="http://cloudmade.com/terms_conditions">Terms of Use</a>). Map data <a target="_blank" href="http://creativecommons.org/licenses/by-sa/2.0/">CCBYSA</a> 2012 <a target="_blank" href="http://openstreetmap.org">OpenStreetMap.org</a> contributors </div>
+    	<div id="mapfooter">Map data © <a target="_blank" href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors </div>
     </div>
     <p>&nbsp;</p>
 
