--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             </div>
         </footer>
     </div>
-    <!-- navigation object : Web CMS Google Analytics - per branch -->
+    <!-- navigation object : Web CMS Google Analytics - per branch --
     <script src='https://ssl.google-analytics.com/ga.js' type='text/javascript'></script>
     <script type="text/javascript">
     var pageTracker = _gat._getTracker("UA-1621853-1");
