--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <!-- end T4 nav 9187 -->
-    <title>Campus map - About the University, The University of York</title>
+    <title>Campus map, The University of York</title>
     <!-- description -->
     <meta name="description" content="An interactive map of the University of York - drag, zoom and pinpoint locations. Includes information on transportation and buildings." />
     <!-- keywords -->
