--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <![endif]-->
     <link rel="stylesheet" media="print" href="https://www.york.ac.uk/media/global/2013/styles/print.css" />
     <script language="JavaScript" type="text/JavaScript">
-      document.write([ "\
-      <script src='",
+      document.write([ "\<script src='",
       ("https:" == document.location.protocol) ? "https://" : "http://",
       "ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js' type='text/javascript'>\<\/script>"].join(''));
     </script>
@@ -188,12 +187,12 @@
                             </div>
                         </div>
                     </div>
-                    <div id="mapdiv" style="width:500px; height:500px;  "></div>
+                    <div id="mapdiv" style="width:500px; height:500px;"></div>
                     <div id="mapfooter">Map data © <a target="_blank" href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors </div>
                 </div>
                 <p>&nbsp;</p>
                 <!-- local scripts -->
-                <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+                <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js??key=AIzaSyC41r2NmF39gwtazgBBpS48Kbug0ljAzlw"></script>
                 <script type="text/javascript" src="js/maps.js"></script>
                 <div class="col-half first-col">
                     <!-- start Page Content template -->
