add info panel for room search

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <form action="#" method="get" class="c-form c-form--joined" id="map-search-form">
                     <fieldset>
                       <div class="c-form__element">
-                        <input class="c-form__input c-form__input--text" type="search" id="map-search-query" name="search-query" placeholder="Enter your search" /><a class="c-btn c-btn--medium js-form-submit" href="#" role="button">Search<i class="c-icon c-icon--search c-icon--after"></i></a>
+                        <input class="c-form__input c-form__input--text" type="search" id="map-search-query" name="search-query" placeholder="Enter your search" autocomplete="off" /><a class="c-btn c-btn--medium js-form-submit" href="#" role="button">Search<i class="c-icon c-icon--search c-icon--after"></i></a>
                         <div class="c-autocomplete">
                           <ul class="c-autocomplete__list">
                           </ul>
