Navigate to location hash
Additionally consolidated opening and closing infoPanel into functions

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                      </div>
                 </div>
             </div>
-            <div id="infoPanel" class="infoPanel">
+            <div class="infoPanel">
                 <a href="#" style="float:right;" class="closeInfoPanel"><i class="c-icon c-icon--close"></i></a>
                 <h3>Information</h3>
-                <div id="infoPanel__content" class="infoPanel__content">
+                <div class="infoPanel__content">
 
                 </div>
             </div>
