Reworked adding markers to the map

--- a/index.html
+++ b/index.html
@@ -114,27 +114,27 @@
       <div class="o-grid__box o-grid__box--full">
     <!-- <div class="o-grid__box o-grid__box--map o-grid__box--half o-grid__box--full@medium-"> -->
         <div class="c-btn-group c-btn-group--block o-map__nav">
-            <input type="checkbox" id="Car parks" name="mapButton" class="c-btn--selectable" value="Car Parks">
-            <label for="Car parks" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--car"></i>Car Parks</label>
-            <input type="checkbox" id="Food and drink" name="mapButton" class="c-btn--selectable" value="Food">
-            <label for="Food and drink" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--coffee"></i>Cafes and Bars</label>
-            <input type="checkbox" id="Bus stops" name="mapButton" class="c-btn--selectable" value="Bus Stops">
-            <label for="Bus stops" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--bus"></i>Bus Stops</label>
-            <input type="checkbox" id="Cash machines" name="mapButton" class="c-btn--selectable" value="Cash Points">
-            <label for="Cash machines" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--money"></i>Cash Points</label>
+            <input type="checkbox" id="food-and-drink" name="mapButton" class="c-btn--selectable" value="Food and drink">
+            <label for="food-and-drink" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--coffee"></i>Food and drink</label>
+            <input type="checkbox" id="study-spaces" name="mapButton" class="c-btn--selectable" value="Study spaces">
+            <label for="study-spaces" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--pencil"></i>Study spaces</label>
+            <input type="checkbox" id="printers" name="mapButton" class="c-btn--selectable" value="Printers">
+            <label for="printers" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--print"></i>Printers</label>
+            <input type="checkbox" id="shops" name="mapButton" class="c-btn--selectable" value="Shops">
+            <label for="shops" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--shopping-basket"></i>Shops</label>
     <!--    </div>
      </div>
 
     <div class="o-grid__box o-grid__box--map o-grid__box--half o-grid__box--full@medium-">
         <div class="c-btn-group c-btn-group--block o-map__nav "> -->
-            <input type="checkbox" id="Services and facilities" name="mapButton" class="c-btn--selectable" value="Services">
-            <label for="Services and facilities" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--info-circle"></i>Services</label>
-            <input type="checkbox" id="Shops" name="mapButton" class="c-btn--selectable" value="Shops">
-            <label for="Shops" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--shopping-basket"></i>Shops</label>
-            <input type="checkbox" id="Services and facilities" name="mapButton" class="c-btn--selectable" value="Services">
-            <label for="Services and facilities" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--info-circle"></i>Services</label>
-            <input type="checkbox" id="Shops" name="mapButton" class="c-btn--selectable" value="Shops">
-            <label for="Shops" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--shopping-basket"></i>Shops</label>
+            <input type="checkbox" id="car-parks" name="mapButton" class="c-btn--selectable" value="Car parks">
+            <label for="car-parks" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--car"></i>Car parks</label>
+            <input type="checkbox" id="bus-stops" name="mapButton" class="c-btn--selectable" value="Bus stops">
+            <label for="bus-stops" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--bus"></i>Bus stops</label>
+            <input type="checkbox" id="cash-points" name="mapButton" class="c-btn--selectable" value="Cash points">
+            <label for="cash-points" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--money"></i>Cash points</label>
+            <input type="checkbox" id="post-boxes" name="mapButton" class="c-btn--selectable" value="Post boxes">
+            <label for="post-boxes" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--envelope"></i>Post boxes</label>
         </div>
     </div>
   </div>
