new header layout and drawer fixes

--- a/index.html
+++ b/index.html
@@ -58,12 +58,14 @@
 <header class="c-map-header" role="banner">
     <div class="o-wrapper o-wrapper--wide o-grid">
         <div class="o-grid__row">
-
-            <div class="o-grid__box o-grid__box--twothirds">
+            <div class="o-grid__box o-grid__box--quarter is-hidden@tiny">
+                <h1 class="c-map-header__title">Campus map</h1>
+            </div>
+            <div class="o-grid__box o-grid__box--half ">
                 <form action="#" method="get" class="c-form c-form--joined" id="map-search-form">
                     <fieldset>
                       <div class="c-form__element">
-                        <input class="c-form__input c-form__input--text" type="search" id="map-search-query" name="search-query" placeholder="Enter your search" autocomplete="off" /><a class="c-btn c-btn--medium js-form-submit" href="#" role="button">Search<i class="c-icon c-icon--search c-icon--after"></i></a>
+                        <input class="c-form__input c-form__input--text" type="search" id="map-search-query" name="search-query" placeholder="Enter your search" autocomplete="off" /></a>
                         <div class="c-autocomplete">
                           <ul class="c-autocomplete__list">
                           </ul>
@@ -71,11 +73,11 @@
                     </fieldset>
                 </form>
             </div>
-            <div class="o-grid__box o-grid__box--third">
+            <div class="o-grid__box o-grid__box--quarter is-hidden@tiny">
                  <a href="https://www.york.ac.uk/"><img class="c-main-header__logo" src="https://www.york.ac.uk/static/1.4/img/logo-white.svg" alt="University of York"></a>
-
             </div>
         </div>
+    </div>
     </div>
 </header>
 
@@ -105,7 +107,7 @@
   <div class="o-grid__row">
       <div class="o-grid__box o-grid__box--full">
 
-        <div class="c-btn-group c-btn-group--block o-map__nav">
+        <div class="c-btn-group c-btn-group--block">
             <input type="checkbox" id="food-and-drink" name="mapButton" class="c-btn--selectable" value="Food and drink">
             <label for="food-and-drink" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--coffee"></i>Food and drink</label>
             <input type="checkbox" id="study-spaces" name="mapButton" class="c-btn--selectable" value="Study spaces">
@@ -130,7 +132,7 @@
 </footer>
 
 
-</div>
+
 
 
 
